fix janky @media conditional for clipping occuring with header and body. there was a % disparity, was -30.3%- but -27.3%- is correct.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
 #topHeader {
   height: 400px;
   width: 100%;
+  margin: auto;
   /* background-color: rgb(161, 191, 219);  */
   /* background-image: url("/images/3px-tile.png"); */
   display: flex;
@@ -18,18 +19,44 @@
   margin-right: auto;
   margin-top: 50px; 
 }
-/* .newTweetText {
-  margin:auto
-} */
 .newTweetButton {  
   color: #d0e8ff;
   outline: none;
   background: transparent;
-  border: transparent;
   width: 100%;
   /* margin: auto; */
   margin-left: auto;
   margin-right: auto; 
+  border-color: #d0e8ff;
+}
+.new-tweet {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+#tweeterText {
+  color: #d0e8ff;
+  width: 100%;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #d0e8ff;
+  border-style: solid;
+  border-width: 0px 0px 5px 0px;
+  font-weight: bold;
+  border-color: rgb(77, 74, 74);
+}
+#tweetButton{
+  background-color:#746363;
+  border-color: rgb(100, 98, 98);
+  border-style: solid; 
+  border-width: 3px;
+  margin: 0 auto;
+  margin-top: 15px;
+  font-size: 32px;
+  color: white;
+}
+#counter{
+  font-family: 'Bungee', sans-serif;
 }
 @media (min-width: 1340px) {
   #topHeader {
@@ -43,8 +70,9 @@
 @media (min-width: 1020px) and (max-width: 1339px) {
   #topHeader {
     margin-left: 3%;
+    margin-right: 3%;
     margin-top:5em;
-    width: 30.3%;
+    width: 27.3%;
     float: left;
   }
 }
